Overview of Changes in alpha112a
================================
* support for debug, cont, debug cont in vu-narrow
* support for debug, cont, debug cont, incompleteness and
  printing state and timing information in narrow
* support for cont/debug cont in variant unify
* support for cont/debug cont in get variants
* support for debug and debug cont in srewite
* support for debug, cont, debug cont and printing
  printing state and timing information in smt-search
* support for debug and debug cont in search
* fixed longstanding family of related performance bugs
  in the ACU matchers
* added bound element variable ACU stripper-collector automaton
* added early failure optimization for ACU_LazySubproblem

Overview of Changes in alpha112
===============================
* fixed a longstanding bug in the comparison of NatSets that
  amongst other things broke the LTL -> VWAA conversion in the
  model checker

Overview of Changes in alpha111b
================================
* optimized handling of stacks of states in conditions
* optimized construction of free right hand sides
* fixed bug where 0 step rewrites module SMT could return
  unsatisfiable constraints
* fixed bug where bindings were being shared between eager and
  lazy places in both regular narrowing and variant narrowing
* fixed bug where narrowing steps and equational rewrites
  weren't being counted in metaNarrow()
* vu-narrow command added
* metaNarrowingSearch() descent function added
* fixed bug where illegally parameterizing a module by a
  parameterized module caused a crash

Overview of Changes in alpha111a
================================
* fixed bug where variables occuring only in a irreducibility
  constraint could cause a crash
* fixed bug where irreducibility constraint could be ignored
* better handled of contexts for metaNarrowingApply()
* require that variables that only occur in irreducibility
  constraint meet safety criteria

Overview of Changes in alpha111