@@ -1,3 +1,10 @@
+2017-04-25  Steven Eker  <eker@install.csl.sri.com>
+
+	* positionState.cc (rebuildAndInstantiateDag): deleted commented
+	out code
+
+===================================Maude112b===========================================
+
 2017-03-30  Steven Eker  <eker@install.csl.sri.com>
 
 	* variantSearch.hh (SimpleRootContainer): added data member
