@@ -1,3 +1,10 @@
+Overview of Changes in alpha112b
+================================
+* fixed bug in AU instantiation code introduced by
+  optimizations in alpha111b
+* fixed memory corruption bug in class VariantUnificationProblem
+  where the garbage collector runs before object fully initialized
+
 Overview of Changes in alpha112a
 ================================
 * support for debug, cont, debug cont in vu-narrow
